--- a/.github/workflows/all-checks-passed.yml
+++ b/.github/workflows/all-checks-passed.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   all-checks:
-    runs-on: [self-hosted, solinas]
+    runs-on: ubuntu-latest
     permissions:
       checks: read
       contents: read
